--- a/src/app/modules/shared/navbar/navbar.component.scss
+++ b/src/app/modules/shared/navbar/navbar.component.scss
@@ -4,9 +4,18 @@
     font-weight: 400;
     font-family: "Noto Sans", sans-serif;
 }
+.flex-nav-icon{
+    display: flex;
+    .icon-div{
+        color: white;
+        font-size: 18px;
+        padding-top: 1em;
+    }
+}
+
 .logo1{
     height:"30px" !important;
-    z-index: 999999;
+    z-index: 9999;
 }
 .dropbtn {
     border: none;
@@ -260,5 +269,11 @@ display: none;
     display: flex;
     justify-content: space-between;
   }
+  .flex-nav-icon{
+  .icon-div{
+    font-size: 28px;
+    padding-top: .3em;
+  }
+}
     
 }
