--- a/src/app/modules/blog/blog/blog.component.scss
+++ b/src/app/modules/blog/blog/blog.component.scss
@@ -64,19 +64,11 @@ span {
     background-repeat: no-repeat;
 }
 .card1{
-    display: flex;
-    padding-top: 1em;
+    padding: 2em;
     gap: 1rem;
     border-top: 1px solid rgba(128, 128, 128, 0.281);
-    padding-bottom: 1em;
 }
-.flex-3{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding-top: 2rem;
-  padding-inline: 1em;
-}
+
 .main-container{
     display: grid;
     padding-inline: 1em;
@@ -111,9 +103,6 @@ span {
         grid-template-columns: repeat(4, 1fr);
         width: min(70%, 1000px);
         margin: 0 auto;
-    }
-    .flex-3{
-        padding-top: 0;
     }
     .main-container{
         grid-template-columns: repeat(4, 1fr);
